--- a/error.html
+++ b/error.html
@@ -13,7 +13,7 @@
 		margin-top:20px;
 		padding-top:20px;
 		text-align:center;
-		color:green;
+		color:red;
 		}
 		</style>
 	</head>
@@ -26,7 +26,7 @@
 		<div class="nav-bar">
 			<div class="container">
 				<ul class="nav">
-					<li><a href="registration.php">Registration</a></li>
+					  <li><a href="registration.php">Registration</a></li>
 				    <li><a href="login.php">Login</a></li>
 					<li><a href="#">Granny profile</a></li>
 					<li><a href="#">Search</a></li>
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="container">
-		<p >Successful Registration </p>
+		<p>Invalid Login Credentials!</p>
 		
 	<div class="footer">
 			<div class="container">
