--- a/success.html
+++ b/success.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="container">
-		<p >Successful Registration </p>
+		<p >Успешена регистрация</p>
 		
 	<div class="footer">
 			<div class="container">
